--- a/index.html
+++ b/index.html
@@ -467,6 +467,51 @@
                 <div class="work__wrapper" data-hover-in="work">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                            <a href="https://vault-coin-ghzl-matthewnweke.vercel.app/" target="_blank"
+                                class="work__box work__box--2">
+                                <img style="display: flex; border-radius: 6px;" class="work__img"
+                                    src="assets/images/vaultcoin.png" alt="">
+                                <div style="display: flex; border-radius: 8px;" class="work__close">
+                                    <svg class="work__plus" height="30" viewBox="0 0 426.66667 426.66667" width="30"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="m405.332031 192h-170.664062v-170.667969c0-11.773437-9.558594-21.332031-21.335938-21.332031-11.773437 0-21.332031 9.558594-21.332031 21.332031v170.667969h-170.667969c-11.773437 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.558594 21.335938 21.332031 21.335938h170.667969v170.664062c0 11.777344 9.558594 21.335938 21.332031 21.335938 11.777344 0 21.335938-9.558594 21.335938-21.335938v-170.664062h170.664062c11.777344 0 21.335938-9.558594 21.335938-21.335938 0-11.773437-9.558594-21.332031-21.335938-21.332031zm0 0" />
+                                    </svg>
+                                    <span class="work__title">Vaultcoin</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                            <a href="andromedia.cc" target="_blank"
+                                class="work__box work__box--2">
+                                <img style="display: flex; border-radius: 6px;" class="work__img"
+                                    src="assets/images/andromedia.png" alt="">
+                                <div style="display: flex; border-radius: 8px;" class="work__close">
+                                    <svg class="work__plus" height="30" viewBox="0 0 426.66667 426.66667" width="30"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="m405.332031 192h-170.664062v-170.667969c0-11.773437-9.558594-21.332031-21.335938-21.332031-11.773437 0-21.332031 9.558594-21.332031 21.332031v170.667969h-170.667969c-11.773437 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.558594 21.335938 21.332031 21.335938h170.667969v170.664062c0 11.777344 9.558594 21.335938 21.332031 21.335938 11.777344 0 21.335938-9.558594 21.335938-21.335938v-170.664062h170.664062c11.777344 0 21.335938-9.558594 21.335938-21.335938 0-11.773437-9.558594-21.332031-21.335938-21.332031zm0 0" />
+                                    </svg>
+                                    <span class="work__title">Andromedia</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                            <a href="https://matthewnweke.github.io/stock/" target="_blank"
+                                class="work__box work__box--2">
+                                <img style="display: flex; border-radius: 6px;" class="work__img"
+                                    src="assets/images/stock.png" alt="">
+                                <div style="display: flex; border-radius: 8px;" class="work__close">
+                                    <svg class="work__plus" height="30" viewBox="0 0 426.66667 426.66667" width="30"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="m405.332031 192h-170.664062v-170.667969c0-11.773437-9.558594-21.332031-21.335938-21.332031-11.773437 0-21.332031 9.558594-21.332031 21.332031v170.667969h-170.667969c-11.773437 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.558594 21.335938 21.332031 21.335938h170.667969v170.664062c0 11.777344 9.558594 21.335938 21.332031 21.335938 11.777344 0 21.335938-9.558594 21.335938-21.335938v-170.664062h170.664062c11.777344 0 21.335938-9.558594 21.335938-21.335938 0-11.773437-9.558594-21.332031-21.335938-21.332031zm0 0" />
+                                    </svg>
+                                    <span class="work__title">Stock Access</span>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
                             <a href="https://matthewnweke.github.io/BITTRADERS/" target="_blank"
                                 class="work__box work__box--2">
                                 <img style="display: flex; border-radius: 6px;" class="work__img"
@@ -496,7 +541,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                        <!-- <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
                             <a href="https://matthewnweke.github.io/weather/" target="_blank"
                                 class="work__box work__box--3">
                                 <img style="display: flex; border-radius: 8px;" class="work__img"
@@ -510,7 +555,7 @@
                                     <span class="work__title">Weather</span>
                                 </div>
                             </a>
-                        </div>
+                        </div> -->
                        
                     </div>
                 </div>
@@ -636,7 +681,7 @@
     <footer>
         <div class="custom-container__fluid">
             <div class="footer__wrapper">
-                2023 Copyright
+                2024 Copyright
             </div>
         </div>
     </footer>
