--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Matthew Nweke">
     <meta name="keywords" content="portfolio, projects, Matthew Nweke">
     <meta name="description" content="personal portfolio">
-    <title>Matthew Nweke</title>
+    <title>Nweke Ezekiel Matthew </title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +69,7 @@
                 </div>
                 <ul class="header__media">
                     <li class="social-btn social-btn--mail">
-                        <a href="mailto:nwekematthew243@gmail.com">
+                        <a href="mailto:chiemeka00001@gmail.com">
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="black"
                                 class="bi bi-envelope" viewBox="0 0 16 16">
                                 <path
@@ -79,7 +79,7 @@
                     </li>
                    
                     <li class="social-btn social-btn--linkedin"><a href="#">
-                            <a href="https://www.linkedin.com/in/matthew-nweke-a64673229/" target="_blank">
+                            <a href="https://www.linkedin.com/in/ezekiel-nweke-906532234?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="black"
                                     class="bi bi-linkedin" viewBox="0 0 16 16">
                                     <path
@@ -114,17 +114,18 @@
                         </div>
                         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                             <div class="header-text">
-                                <div class="header-text__top">
-                                    <h1>
-                                        <span class="header-text__title">Matthew</span>
-                                        <span class="header-text__title header-text__title--sub">Nweke</span>
+                                <!-- <div class=""> -->
+                                    <h1 class=""style="display:flex; gap:2rem; font-size:3rem;">
+                                        <span class="header-text__title">Nweke</span>
+                                        <span class="header-text__title header-text__title--sub">Ezekiel</span>
+                                        <span class="header-text__title header-text__title--sub">Matthew</span>
                                     </h1>
-                                </div>
+                                <!-- </div> -->
                                 <div style="display: flex; font-size: 20px;" class="header-text__bottom">
                                     <h2>Front-End Web Developer</h2>
                                 </div>
                             </div>
-                            <a href="assets/documents/nweke-matthew.pdf" download>
+                            <a href="assets/documents/nweke-ezekiel-resume.pdf" download>
                                 <button class="btn__main">
                                     Download Resume
                                     <div class="btn__main__horizontal"></div>
@@ -572,7 +573,7 @@
                                     <div class="contact-wrap w-100 p-md-5 p-4">
                                         <div id="form-message-warning" class="mb-4"></div>
                                         <form method="POST" id="contactForm" name="contactForm"
-                                            action="mailto:nwekematthew243@gmail.com" enctype="text/plain">
+                                            action="mailto:chiemeka00001@gmail.com" enctype="text/plain">
                                             <div class="row">
                                                 <div class="col-xl-6 col-lg-6 col-sm-12 col-md-12">
                                                     <div class="form-group mb-5">
@@ -666,7 +667,7 @@
                                                 </svg>
                                             </div>
                                             <div style="font-size: 19px; color: #000;" class="text">
-                                                <p><span style="color: #000;">Email: </span> nwekematthew243@gmail.com</p>
+                                                <p><span style="color: #000;">Email: </span> chiemeka00001@gmail.com</p>
                                             </div>
                                         </div>
                                     </div>
