--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                         <div style="display: flex; font-size: 15px;" class="education__year">2018 - 2023
                                         </div>
                                         <h3 style="display: flex; font-size: 23px;" class="education__title">
-                                            Computer Science</h3>
+                                            Mathematics</h3>
                                         <h3 style="display: flex; font-size: 17px;" class="education__place">
                                             University of Nigeria,Nsukka.</h3>
                                     </div>
