--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
                         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                             <div class="header-text">
                                 <!-- <div class=""> -->
-                                    <h1 class=""style="display:flex; gap:2rem; font-size:3rem;">
+                                    <h1 class=""style="display:flex; gap:2rem; font-size:3rem; margin-left: 1rem">
                                         <span class="header-text__title">Nweke</span>
                                         <span class="header-text__title header-text__title--sub">Ezekiel</span>
                                         <span class="header-text__title header-text__title--sub">Matthew</span>
                                     </h1>
                                 <!-- </div> -->
-                                <div style="display: flex; font-size: 20px;" class="header-text__bottom">
+                                <div style="display: flex; font-size: 20px;margin-left: 1rem" class="header-text__bottom">
                                     <h2>Front-End Web Developer</h2>
                                 </div>
                             </div>
-                            <a href="assets/documents/nweke-ezekiel-resume.pdf" download>
+                            <a href="assets/documents/nweke-ezekiel-resume.pdf" download style="text-align: center;">
                                 <button class="btn__main">
                                     Download Resume
                                     <div class="btn__main__horizontal"></div>
