--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Matthew Nweke">
     <meta name="keywords" content="portfolio, projects, Matthew Nweke">
     <meta name="description" content="personal portfolio">
-    <title>Nweke Ezekiel Matthew </title>
+    <title>Nweke Matthew  </title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +69,7 @@
                 </div>
                 <ul class="header__media">
                     <li class="social-btn social-btn--mail">
-                        <a href="mailto:chiemeka00001@gmail.com">
+                        <a href="mailto:nwekematthew243@gmail.com">
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="black"
                                 class="bi bi-envelope" viewBox="0 0 16 16">
                                 <path
@@ -79,7 +79,7 @@
                     </li>
                    
                     <li class="social-btn social-btn--linkedin"><a href="#">
-                            <a href="https://www.linkedin.com/in/ezekiel-nweke-906532234?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                            <a href="https://www.linkedin.com/in/matthew-nweke-906532234?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="black"
                                     class="bi bi-linkedin" viewBox="0 0 16 16">
                                     <path
@@ -117,7 +117,6 @@
                                 <!-- <div class=""> -->
                                     <h1 class=""style="display:flex; gap:2rem; font-size:3rem; margin-left: 1rem">
                                         <span class="header-text__title">Nweke</span>
-                                        <span class="header-text__title header-text__title--sub">Ezekiel</span>
                                         <span class="header-text__title header-text__title--sub">Matthew</span>
                                     </h1>
                                 <!-- </div> -->
@@ -125,7 +124,7 @@
                                     <h2>Front-End Web Developer</h2>
                                 </div>
                             </div>
-                            <a href="assets/documents/nweke-ezekiel-resume.pdf" download style="text-align: center;">
+                            <a href="assets/documents/nweke-matthew-resume.pdf" download style="text-align: center;">
                                 <button class="btn__main">
                                     Download Resume
                                     <div class="btn__main__horizontal"></div>
@@ -157,7 +156,7 @@
                                         <div style="display: flex; font-size: 15px;" class="education__year">2018 - 2023
                                         </div>
                                         <h3 style="display: flex; font-size: 23px;" class="education__title">
-                                            Mathematics</h3>
+                                            Computer Science</h3>
                                         <h3 style="display: flex; font-size: 17px;" class="education__place">
                                             University of Nigeria,Nsukka.</h3>
                                     </div>
@@ -168,13 +167,10 @@
                             <div class="about__education d-flex justify-content-center">
                                 <div class="education">
                                     <div class="education__icon-wrapper d-flex justify-content-start">
-                                        <!-- <div class="education__icon">
-                                            <img class="education__img" src="assets/images/education.png"
-                                                alt="education">
-                                        </div> -->
+                                       
                                     </div>
                                     <div class="education__content">
-                                        <div style="display: flex; font-size: 15px;" class="education__year">2023 Jan - current
+                                        <div style="display: flex; font-size: 15px;" class="education__year">2023 Jan - 2023 Nov
                                         </div>
                                         <h3 style="display: flex; font-size: 23px;" class="education__title">Front-End
                                             Developer</h3>
@@ -573,7 +569,7 @@
                                     <div class="contact-wrap w-100 p-md-5 p-4">
                                         <div id="form-message-warning" class="mb-4"></div>
                                         <form method="POST" id="contactForm" name="contactForm"
-                                            action="mailto:chiemeka00001@gmail.com" enctype="text/plain">
+                                            action="mailto:nwekematthew243@gmail.com" enctype="text/plain">
                                             <div class="row">
                                                 <div class="col-xl-6 col-lg-6 col-sm-12 col-md-12">
                                                     <div class="form-group mb-5">
@@ -667,7 +663,7 @@
                                                 </svg>
                                             </div>
                                             <div style="font-size: 19px; color: #000;" class="text">
-                                                <p><span style="color: #000;">Email: </span> chiemeka00001@gmail.com</p>
+                                                <p><span style="color: #000;">Email: </span>nwekematthew243@gmail.com</p>
                                             </div>
                                         </div>
                                     </div>
