--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
-                            <a href="andromedia.cc" target="_blank"
+                            <a href="https://andromedia.cc/" target="_blank"
                                 class="work__box work__box--2">
                                 <img style="display: flex; border-radius: 6px;" class="work__img"
                                     src="assets/images/andromedia.png" alt="">
